--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     {% if user.user_type == 'admin' %}
    
     <div class ="admin-panel">
-        <h2>Painel do Administrador</h2>
+        <h2>Possibilidades De Admin</h2>
         <div class="admin">
             <div><button type="button">Ver Candidaturas</button></div>       
             <div><button type="button">Criar Nova Vaga</button></div>
